# Sbot

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  env-example.md  envExample.md  readme.md
src/: main.rs
src/commands/: mod.rs
src/modules/: activities.rs  checks.rs  core.rs  db.rs  mod.rs  music.rs  owner.rs  suggestions.rs  tests.rs  utils.rs  welcome.rs
