[package]
name = "sbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {version = "0.11.6", features = ["client", "standard_framework", "voice", "cache", "rustls_backend"]}
tokio = {version = "1.18.2", features=["macros", "rt-multi-thread", "signal"]}
sysinfo = "0.23.13"
serde = "1.0.137"
serde_json = "1.0.81"
rand = "0.8.5"
chrono = "0.4.19"
reqwest = "0.11.10"
songbird = {version = "0.3.2", features = ["builtin-queue", "yt-dlp"]}

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
