[package]
name = "sbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
serenity = {version = "0.12.2", features = ["client", "standard_framework", "voice", "cache", "rustls_backend"]}
tokio = {version = "1.40.0", features=["macros", "rt-multi-thread", "signal"]}
sysinfo = "0.31.4"
serde = "1.0.210"
serde_json = "1.0.128"
rand = "0.8.5"
chrono = "0.4.38"
reqwest = "0.11"
songbird = {version = "0.4.3", features = ["builtin-queue", ]}

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
